{
    "name": "PlayerControls2",
    "maps": [
        {
            "name": "Player2",
            "id": "e9c173b3-604c-4c6c-b39d-c90031eb6673",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "eed0caf8-1902-4e2b-8c01-35c3941cccc1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "f545fcc2-5e17-4213-aacb-980ece2dc99a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickItem",
                    "type": "Button",
                    "id": "07f68bc6-d946-461e-baee-3e178ad89d99",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "ecaa5d26-fe05-40b2-b816-500996a68679",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "533e5a9c-40db-46f2-8c99-a7158c11670a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "20d7d66f-e118-40b5-b6e1-00a75acce08b",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a437a5e0-1457-4040-90e7-71b77ee479e1",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f49fd69-17ea-4dd4-aa3c-30b722c33583",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6baf99f-9426-4bb6-a073-1f5277081145",
                    "path": "<XInputController>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d442582-4f4a-4dc3-ab8a-b2f57a0eb601",
                    "path": "<XInputController>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}